--- a/quienes-somos/quienes-somos.html
+++ b/quienes-somos/quienes-somos.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>About us</title>
-    <link rel="stylesheet" href="about-us.css" />
+    <link rel="stylesheet" href="quienes-somos.css" />
 </head>
 
 <body>
     <h1>
-        About us.
+        Quienes somos
     </h1>
 </body>
 
