--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact us</title>
-    <link rel="stylesheet" href="contact-us.css" />
+    <link rel="stylesheet" href="servicios.css" />
 </head>
 
 <body>
     <h1>
-        Contact us.
+        Servicios
     </h1>
 </body>
 
