se agrego footer y servicios

--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -3,14 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Contact us</title>
+    <title>Servicios</title>
     <link rel="stylesheet" href="servicios.css" />
 </head>
 
 <body>
-    <h1>
-        Servicios
-    </h1>
+    <div class="servicios-contenido">
+        <div>
+            Servicios móviles
+            <div>
+
+            </div>
+        </div>
+        <div>
+            Internet
+            <div>
+                <ul>
+                    <li>5mb</li>
+                    <li>10mb</li>
+                    <li>20mb</li>
+                    <li>50mb</li>
+                </ul>
+            </div>
+        </div>
+        <div>
+            Televisión
+            <div>
+                
+            </div>
+        </div>
+        <div>
+            Línea Fija
+            <div>
+                
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
