Second approach of the form to contact,  and the phones list

--- a/equipos/equipos.html
+++ b/equipos/equipos.html
@@ -11,6 +11,22 @@
     <h1>
         Equipos
     </h1>
+    <div class="contenedor">
+        <div>
+            <img src="../imagenes/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A70 <br/> $999.000
+            </p>
+        </div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+    </div>
 </body>
 
 </html>
