se adiciono planes y equipos

--- a/planes/planes.html
+++ b/planes/planes.html
@@ -11,6 +11,33 @@
     <h1>
         Planes
     </h1>
+    <div class="planes-contenido">
+        <div>
+            <h3>
+                Básico
+            </h3>
+            <div>
+                50 Canales de TV, 5mb de internet y línea fija llamadas naciones
+            </div>
+        </div>
+        <div>
+            <h3>
+                Especial
+            </h3>
+
+            <div>
+                    75 Canales de TV + 40 HD, 10mb de internet y línea fija llamadas naciones e internaciones
+            </div>
+        </div>
+        <div>
+            <h3>
+                Premium
+            </h3>
+            <div>
+                    100 Canales de TV en HD, 20mb de internet banda ancha y línea fija llamadas naciones, internaciones y teléfonos móviles
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
