--- a/equipos/equipos.html
+++ b/equipos/equipos.html
@@ -13,19 +13,45 @@
     </h1>
     <div class="contenedor">
         <div>
-            <img src="../imagenes/samsung-a7.png" height="300px">
-            <p>SAMSUNG GALAXY A70 <br/> $999.000
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A70 <br /> $999.000
             </p>
         </div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A71 <br /> $999.001
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A72 <br /> $999.002
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A73 <br /> $999.003
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A74 <br /> $999.004
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A75 <br /> $999.005
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A76 <br /> $999.006
+            </p>
+        </div>
+        <div>
+            <img src="../imagenes/equipos/samsung-a7.png" height="300px">
+            <p>SAMSUNG GALAXY A77 <br /> $999.007
+            </p>
+        </div>
     </div>
 </body>
 
