Added some inputs for the plans' section

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     
     </div>
     <template id="servicio-al-cliente">
-        <iframe src="servicio-al-cliente/servicio-al-cliente.html" width="100%" height="600"  frameborder="0"></iframe>
+        <iframe src="servicio-al-cliente/servicio-al-cliente.html" width="100%"  frameborder="0"></iframe>
     </template>
     <template id="servicios">
-        <iframe src="servicios/servicios.html" width="100%" height="600"  frameborder="0"></iframe>
+        <iframe src="servicios/servicios.html" width="100%"  frameborder="0"></iframe>
     </template>
     <template id="equipos">
         <iframe src="equipos/equipos.html" width="100%" height="900"  frameborder="0"></iframe>
     </template>
     <template id="planes">
-        <iframe src="planes/planes.html" width="100%" height="600"  frameborder="0"></iframe>
+        <iframe src="planes/planes.html" width="100%"  frameborder="0"></iframe>
     </template>
     <template id="quienes-somos">
-            <iframe src="quienes-somos/quienes-somos.html" width="100%" height="600"  frameborder="0"></iframe>
+            <iframe src="quienes-somos/quienes-somos.html" width="100%"  frameborder="0"></iframe>
         </template>
     <div id="container">
     </div>
