--- a/planes/planes.html
+++ b/planes/planes.html
@@ -12,30 +12,71 @@
         Planes
     </h1>
     <div class="planes-contenido">
-        <div>
+        <div class="width50">
             <h3>
-                Básico
+                Personas
             </h3>
-            <div>
-                50 Canales de TV, 5mb de internet y línea fija llamadas naciones
-            </div>
+            <p>
+                Internet <br/>
+                <input type="radio" id ="personasInternet0" name="personasInternet" value="0"> <label for="personasInternet0">No incluido</label> <br>
+                <input type="radio" id ="personasInternet5" name="personasInternet" value="5"> <label for="personasInternet5"> 5 mb</label><br>
+                <input type="radio" id ="personasInternet10" name="personasInternet" value="10"> <label for="personasInternet10">10 mb</label> <br>
+                <input type="radio" id ="personasInternet20" name="personasInternet" value="20"> <label for="personasInternet20">20 mb</label> 
+            </p>
+            <p>
+                Telefonía fija <br/>
+                <input type="radio" id ="personasTelefoniaN" name="personasTelefonia" value="ninguno"> <label for="personasTelefoniaN">No incluido</label><br>
+                <input type="radio" id ="personasTelefoniaL" name="personasTelefonia" value="locales"> <label for="personasTelefoniaL">Ilimitadas locales</label> <br>
+                <input type="radio" id ="personasTelefoniaNa" name="personasTelefonia" value="nacionales"> <label for="personasTelefoniaNa"> Ilimitadas Nacionales</label><br>
+                <input type="radio" id ="personasTelefoniaI" name="personasTelefonia" value="internacionales"> <label for="personasTelefoniaI">Ilimitadas Internacionales</label> 
+            </p>
+            <p>
+                Televisión <br/>
+                <input type="radio" id ="personasTelevisionN" name="personasTelevision" value="ninguno"> <label for="personasTelevisionN">No incluido</label><br>
+                <input type="radio" id ="personasTelevisionE" name="personasTelevision" value="estandar"> <label for="personasTelevisionE">Canales Estandar HD</label> <br>
+                <input type="radio" id ="personasTelevisionD" name="personasTelevision" value="deportivos"> <label for="personasTelevisionD"> Más canales exclusivos deportivos HD</label><br>
+                <input type="radio" id ="personasTelevisionI" name="personasTelevision" value="eeuu"> <label for="personasTelevisionI">Más canales disponibles en EEUU</label> 
+            </p>
+            <p>
+                Servicios Móviles <br/>
+                <input type="radio" id ="personasMovilesN" name="personasMoviles" value="ninguno"> <label for="personasMovilesN">No incluido</label><br>
+                <input type="radio" id ="personasMovilesE" name="personasMoviles" value="mismo"> <label for="personasMovilesE">Llamadas al mismo operador</label> <br>
+                <input type="radio" id ="personasMovilesD" name="personasMoviles" value="sms"> <label for="personasMovilesD"> Más SMS todo Operador</label><br>
+                <input type="radio" id ="personasMovilesI" name="personasMoviles" value="todo"> <label for="personasMovilesI">Más llamadas a todos los operadores</label> 
+            </p>
         </div>
-        <div>
+        <div class="width50">
             <h3>
-                Especial
+                Empresas
             </h3>
-
-            <div>
-                    75 Canales de TV + 40 HD, 10mb de internet y línea fija llamadas naciones e internaciones
-            </div>
-        </div>
-        <div>
-            <h3>
-                Premium
-            </h3>
-            <div>
-                    100 Canales de TV en HD, 20mb de internet banda ancha y línea fija llamadas naciones, internaciones y teléfonos móviles
-            </div>
+            <p>
+                Internet <br/>
+                <input type="radio" id ="empresasInternet0" name="empresasInternet" value="0"> <label for="empresasInternet0">No incluido</label> <br>
+                <input type="radio" id ="empresasInternet20" name="empresasInternet" value="20"> <label for="empresasInternet20"> 20 mb</label><br>
+                <input type="radio" id ="empresasInternet50" name="empresasInternet" value="50"> <label for="empresasInternet50">50 mb</label> <br>
+                <input type="radio" id ="empresasInternet100" name="empresasInternet" value="100"> <label for="empresasInternet100">100 mb</label> 
+            </p>
+            <p>
+                Telefonía fija <br/>
+                <input type="radio" id ="empresasTelefonia0" name="empresasTelefonia" value="ninguno"> <label for="empresasTelefonia0">No incluido</label><br>
+                <input type="radio" id ="empresasTelefonia2" name="empresasTelefonia" value="locales"> <label for="empresasTelefonia2">Dos líneas</label> <br>
+                <input type="radio" id ="empresasTelefonia3" name="empresasTelefonia" value="nacionales"> <label for="empresasTelefonia3">Tres líneas</label><br>
+                <input type="radio" id ="empresasTelefonia4" name="empresasTelefonia" value="internacionales"> <label for="empresasTelefonia4">Cuatro líneas</label> 
+            </p>
+            <p>
+                Televisión <br/>
+                <input type="radio" id ="empresasTelevisionN" name="empresasTelevision" value="ninguno"> <label for="empresasTelevisionN">No incluido</label><br>
+                <input type="radio" id ="empresasTelevisionE" name="empresasTelevision" value="5"> <label for="empresasTelevisionE">Todos los canales HD, 5 decodificadores</label> <br>
+                <input type="radio" id ="empresasTelevisionD" name="empresasTelevision" value="8"> <label for="empresasTelevisionD"> Todos los canales HD, 8 decodificadores</label><br>
+                <input type="radio" id ="empresasTelevisionI" name="empresasTelevision" value="15"> <label for="empresasTelevisionI">Todos los canales HD, 15 decodificadores</label> 
+            </p>
+            <p>
+                Servicios Móviles <br/>
+                <input type="radio" id ="empresasMovilesN" name="empresasMoviles" value="ninguno"> <label for="empresasMovilesN">No incluido</label><br>
+                <input type="radio" id ="empresasMovilesE" name="empresasMoviles" value="5"> <label for="empresasMovilesE">Llamadas a todo operador, 5 líneas</label> <br>
+                <input type="radio" id ="empresasMovilesD" name="empresasMoviles" value="10"> <label for="empresasMovilesD"> Llamadas a todo operador, 10 líneas</label><br>
+                <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="15"> <label for="empresasMovilesI">Llamadas a todo operador, 15 líneas</label> 
+            </p>
         </div>
     </div>
 </body>
