Agregado planes con precio y descripcion

--- a/planes/planes.html
+++ b/planes/planes.html
@@ -19,30 +19,30 @@
             <p>
                 Internet <br/>
                 <input type="radio" id ="personasInternet0" name="personasInternet" value="0"> <label for="personasInternet0">No incluido</label> <br>
-                <input type="radio" id ="personasInternet5" name="personasInternet" value="5"> <label for="personasInternet5"> 5 mb</label><br>
-                <input type="radio" id ="personasInternet10" name="personasInternet" value="10"> <label for="personasInternet10">10 mb</label> <br>
-                <input type="radio" id ="personasInternet20" name="personasInternet" value="20"> <label for="personasInternet20">20 mb</label> 
+                <input type="radio" id ="personasInternet5" name="personasInternet" value="34000"> <label for="personasInternet5"> 5 mb $34.000</label><br>
+                <input type="radio" id ="personasInternet10" name="personasInternet" value="53000"> <label for="personasInternet10">10 mb $53.000</label> <br>
+                <input type="radio" id ="personasInternet20" name="personasInternet" value="65000"> <label for="personasInternet20">20 mb $65.000</label> 
             </p>
             <p>
                 Telefonía fija <br/>
                 <input type="radio" id ="personasTelefoniaN" name="personasTelefonia" value="ninguno"> <label for="personasTelefoniaN">No incluido</label><br>
-                <input type="radio" id ="personasTelefoniaL" name="personasTelefonia" value="locales"> <label for="personasTelefoniaL">Ilimitadas locales</label> <br>
-                <input type="radio" id ="personasTelefoniaNa" name="personasTelefonia" value="nacionales"> <label for="personasTelefoniaNa"> Ilimitadas Nacionales</label><br>
-                <input type="radio" id ="personasTelefoniaI" name="personasTelefonia" value="internacionales"> <label for="personasTelefoniaI">Ilimitadas Internacionales</label> 
+                <input type="radio" id ="personasTelefoniaL" name="personasTelefonia" value="28000"> <label for="personasTelefoniaL">Llamadas locales ilimitadas $28.000</label> <br>
+                <input type="radio" id ="personasTelefoniaNa" name="personasTelefonia" value="51300"> <label for="personasTelefoniaNa"> Llamadas Locales y Nacionales ilimitadas $51.300</label><br>
+                <input type="radio" id ="personasTelefoniaI" name="personasTelefonia" value="136700"> <label for="personasTelefoniaI">Llamadas Locales y Nacionales ilimitadas + 150 min destino internacional $136.700</label> 
             </p>
             <p>
                 Televisión <br/>
                 <input type="radio" id ="personasTelevisionN" name="personasTelevision" value="ninguno"> <label for="personasTelevisionN">No incluido</label><br>
-                <input type="radio" id ="personasTelevisionE" name="personasTelevision" value="estandar"> <label for="personasTelevisionE">Canales Estandar HD</label> <br>
-                <input type="radio" id ="personasTelevisionD" name="personasTelevision" value="deportivos"> <label for="personasTelevisionD"> Más canales exclusivos deportivos HD</label><br>
-                <input type="radio" id ="personasTelevisionI" name="personasTelevision" value="eeuu"> <label for="personasTelevisionI">Más canales disponibles en EEUU</label> 
+                <input type="radio" id ="personasTelevisionE" name="personasTelevision" value="55000"> <label for="personasTelevisionE">100 Canales estándar + HBO $55.000</label> <br>
+                <input type="radio" id ="personasTelevisionD" name="personasTelevision" value="72300"> <label for="personasTelevisionD"> 115 canales estándar + 50 canales HD $72.300</label><br>
+                <input type="radio" id ="personasTelevisionI" name="personasTelevision" value="87000"> <label for="personasTelevisionI">130 canales estándar + 65 canales HD + 5 canales deportivos $87.000</label> 
             </p>
             <p>
                 Servicios Móviles <br/>
                 <input type="radio" id ="personasMovilesN" name="personasMoviles" value="ninguno"> <label for="personasMovilesN">No incluido</label><br>
-                <input type="radio" id ="personasMovilesE" name="personasMoviles" value="mismo"> <label for="personasMovilesE">Llamadas al mismo operador</label> <br>
-                <input type="radio" id ="personasMovilesD" name="personasMoviles" value="sms"> <label for="personasMovilesD"> Más SMS todo Operador</label><br>
-                <input type="radio" id ="personasMovilesI" name="personasMoviles" value="todo"> <label for="personasMovilesI">Más llamadas a todos los operadores</label> 
+                <input type="radio" id ="personasMovilesE" name="personasMoviles" value="26700"> <label for="personasMovilesE">Llamadas ilimitadas al mismo operador + 500 min otros operadores + redes sociales ilimitadas $26.700</label> <br>
+                <input type="radio" id ="personasMovilesD" name="personasMoviles" value="55400"> <label for="personasMovilesD"> Llamadas ilimitadas todo destino + 300 MSM + redes sociales $55.400</label><br>
+                <input type="radio" id ="personasMovilesI" name="personasMoviles" value="78000"> <label for="personasMovilesI">Llamadas ilimitadas todo destino + 3 GB de datos + 500 MSM $78.000</label> 
             </p>
         </div>
         <div class="width50">
@@ -52,30 +52,33 @@
             <p>
                 Internet <br/>
                 <input type="radio" id ="empresasInternet0" name="empresasInternet" value="0"> <label for="empresasInternet0">No incluido</label> <br>
-                <input type="radio" id ="empresasInternet20" name="empresasInternet" value="20"> <label for="empresasInternet20"> 20 mb</label><br>
-                <input type="radio" id ="empresasInternet50" name="empresasInternet" value="50"> <label for="empresasInternet50">50 mb</label> <br>
-                <input type="radio" id ="empresasInternet100" name="empresasInternet" value="100"> <label for="empresasInternet100">100 mb</label> 
+                <input type="radio" id ="empresasInternet20" name="empresasInternet" value="70000"> <label for="empresasInternet20"> 20 mb $70.000</label><br>
+                <input type="radio" id ="empresasInternet50" name="empresasInternet" value="94900"> <label for="empresasInternet50">50 mb $94.900</label> <br>
+                <input type="radio" id ="empresasInternet100" name="empresasInternet" value="112000"> <label for="empresasInternet100">100 mb $112.000</label> <br>
+                <input type="radio" id ="empresasInternet50" name="empresasInternet" value="35900"> <label for="empresasInternet50">Internet Dedicado $35.900</label> <br>
+                
             </p>
             <p>
                 Telefonía fija <br/>
                 <input type="radio" id ="empresasTelefonia0" name="empresasTelefonia" value="ninguno"> <label for="empresasTelefonia0">No incluido</label><br>
-                <input type="radio" id ="empresasTelefonia2" name="empresasTelefonia" value="locales"> <label for="empresasTelefonia2">Dos líneas</label> <br>
-                <input type="radio" id ="empresasTelefonia3" name="empresasTelefonia" value="nacionales"> <label for="empresasTelefonia3">Tres líneas</label><br>
-                <input type="radio" id ="empresasTelefonia4" name="empresasTelefonia" value="internacionales"> <label for="empresasTelefonia4">Cuatro líneas</label> 
+                <input type="radio" id ="empresasTelefonia2" name="empresasTelefonia" value="37800"> <label for="empresasTelefonia2">Llamadas regionales ilimitadas + 500 min a nivel nacional $37.800</label> <br>
+                <input type="radio" id ="empresasTelefonia3" name="empresasTelefonia" value="66000"> <label for="empresasTelefonia3">Llamadas nacionales ilimitadas + 500 min a celular $66.000</label><br>
+                <input type="radio" id ="empresasTelefonia4" name="empresasTelefonia" value="160744"> <label for="empresasTelefonia4">Llamadas nacionales ilimitadas + 2.000 min a celular + 300 min llamadas internacionales $160.744</label> 
             </p>
             <p>
                 Televisión <br/>
                 <input type="radio" id ="empresasTelevisionN" name="empresasTelevision" value="ninguno"> <label for="empresasTelevisionN">No incluido</label><br>
-                <input type="radio" id ="empresasTelevisionE" name="empresasTelevision" value="5"> <label for="empresasTelevisionE">Todos los canales HD, 5 decodificadores</label> <br>
-                <input type="radio" id ="empresasTelevisionD" name="empresasTelevision" value="8"> <label for="empresasTelevisionD"> Todos los canales HD, 8 decodificadores</label><br>
-                <input type="radio" id ="empresasTelevisionI" name="empresasTelevision" value="15"> <label for="empresasTelevisionI">Todos los canales HD, 15 decodificadores</label> 
+                <input type="radio" id ="empresasTelevisionE" name="empresasTelevision" value="85000"> <label for="empresasTelevisionE">105 canales estándar + 50 canales HD, 2 decodificadores 85.000</label> <br>
+                <input type="radio" id ="empresasTelevisionD" name="empresasTelevision" value="151900"> <label for="empresasTelevisionD"> 138 canales estándar + 103 canales HD, 4 decodificadores $151.900</label><br>
+                <input type="radio" id ="empresasTelevisionI" name="empresasTelevision" value="183200"> <label for="empresasTelevisionI">150 canales estándar + 110 canales HD + 5  decodificadores $183.200</label> 
             </p>
             <p>
                 Servicios Móviles <br/>
                 <input type="radio" id ="empresasMovilesN" name="empresasMoviles" value="ninguno"> <label for="empresasMovilesN">No incluido</label><br>
-                <input type="radio" id ="empresasMovilesE" name="empresasMoviles" value="5"> <label for="empresasMovilesE">Llamadas a todo operador, 5 líneas</label> <br>
-                <input type="radio" id ="empresasMovilesD" name="empresasMoviles" value="10"> <label for="empresasMovilesD"> Llamadas a todo operador, 10 líneas</label><br>
-                <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="15"> <label for="empresasMovilesI">Llamadas a todo operador, 15 líneas</label> 
+                <input type="radio" id ="empresasMovilesE" name="empresasMoviles" value="30000"> <label for="empresasMovilesE">Llamadas ilimitadas a todo operador + 5 GB de datos + 150 MSM $30.000</label> <br>
+                <input type="radio" id ="empresasMovilesD" name="empresasMoviles" value="56000"> <label for="empresasMovilesD"> Llamadas ilimitadas a todo operador + 15 GB de datos + 300 MSM $56.000</label><br>
+                <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="75000"> <label for="empresasMovilesI">Llamadas ilimitadas a todo operador + 30 GB de datos + 1.000 MSM $75.000</label><br>
+                <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="105000"> <label for="empresasMovilesI">Llamadas ilimitadas a todo operador + 50 GB de datos + 1.000 MSM + 500 min llamadas al exterior $105.000</label> 
             </p>
         </div>
     </div>
