Added whole workflow to show the total value after discounts

--- a/cotizacion/cotizacion.html
+++ b/cotizacion/cotizacion.html
@@ -8,12 +8,21 @@
 </head>
 
 <body>
-    <h1>
-        Cotización
-    </h1>
-    <p>
-        Prueba
-    </p>
+    <div class="cotizacion">
+        <h1>
+            Cotización
+        </h1>
+        <div id="contenedor">
+            <h3>Servicios a Contratar</h3>
+            <lu id="lista"></lu>
+        </div>
+        <p>Cantidad de servicios contratados: <span id="cantidad"></span></p>
+        <p>Tipo de cliente: <span id="tipoCliente"></span></p>
+        <p>Porcentaje de descuento: <span id="descuento"></span></p>
+        <p>Total valor servicios: <span id="valorSinDescuento"></span></p>
+        <p>Valor descuento: <span id="valorDescuento"></span></p>
+        <p>Total a pagar: <span id="valorConDescuento"></span></p>
+    </div>
     <script src="cotizacion.js"></script>
 </body>
 
