--- a/planes/planes.html
+++ b/planes/planes.html
@@ -44,7 +44,9 @@
                 <input type="radio" id ="personasMovilesD" name="personasMoviles" value="55400"> <label id="personasMovilesDLabel" for="personasMovilesD"> Llamadas ilimitadas todo destino + 300 MSM + redes sociales $55.400</label><br>
                 <input type="radio" id ="personasMovilesI" name="personasMoviles" value="78000"> <label id="personasMovilesILabel" for="personasMovilesI">Llamadas ilimitadas todo destino + 3 GB de datos + 500 MSM $78.000</label> 
             </p>
-            <button onclick="cotizarPersonas()">Cotizar</button>
+            <div style="width: 100%;text-align: center;">
+                <button onclick="cotizarPersonas()">Cotizar</button>
+            </div>
         </div>
         <div class="width50">
             <h3>
@@ -81,7 +83,10 @@
                 <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="75000"> <label id="empresasMovilesILabel" for="empresasMovilesI">Llamadas ilimitadas a todo operador + 30 GB de datos + 1.000 MSM $75.000</label><br>
                 <input type="radio" id ="empresasMovilesPlus" name="empresasMoviles" value="105000"> <label id="empresasMovilesPlusLabel" for="empresasMovilesPlus">Llamadas ilimitadas a todo operador + 50 GB de datos + 1.000 MSM + 500 min llamadas al exterior $105.000</label> 
             </p>
-            <button onclick="cotizarEmpresas()">Cotizar</button>
+            <div style="width: 100%;text-align: center;">
+
+                <button onclick="cotizarEmpresas()">Cotizar</button>
+            </div>
         </div>
     </div>
     <script src="planes.js"></script>
