--- a/servicio-al-cliente/servicio-al-cliente.html
+++ b/servicio-al-cliente/servicio-al-cliente.html
@@ -8,30 +8,32 @@
 </head>
 
 <body>
-    <h1>
-        Servicio al cliente
-    </h1>
-    <form action="#">
-        Nombre:
-        <input name="nombre" type="text">
-        <br></br>
-        Motivo:
-        <select name="motivo">
-            <option value="compra">Compra</option>
-            <option value="asesoria">Asesoria</option>
-            <option value="queja">Queja</option>
-            <option value="reclamo">Reclamo</option>
-        </select>
-        <br></br>
-        Comentarios:
-        <br/>
-        <textarea name="mensaje" rows="10" cols="30"></textarea>
-        <br></br>
-        <input type="submit">
-    </form>
-    <p>
-        Para mayor información, se puede comunicar al 018000123456
-    </p>
+    <div class="servicio-al-cliente">
+        <h1>
+            Servicio al cliente
+        </h1>
+        <form action="#">
+            Nombre:
+            <input name="nombre" type="text">
+            <br></br>
+            Motivo:
+            <select name="motivo">
+                <option value="compra">Compra</option>
+                <option value="asesoria">Asesoria</option>
+                <option value="queja">Queja</option>
+                <option value="reclamo">Reclamo</option>
+            </select>
+            <br></br>
+            Comentarios:
+            <br/>
+            <textarea name="mensaje" rows="10" cols="30"></textarea>
+            <br></br>
+            <input type="submit">
+        </form>
+        <p>
+            Para mayor información, se puede comunicar al 018000123456
+        </p>
+    </div>
 </body>
 
 </html>
