--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div onclick="showContent('planes')">Planes</div>
         <div onclick="showContent('servicio-al-cliente')">Servicio al Cliente</div>
         <div onclick="showContent('quienes-somos')">¿Quienes somos?</div>
+        <div onclick="showContent('perfil')">Mi Perfil</div>
 
     </div>
     <template id="servicio-al-cliente">
@@ -35,6 +36,9 @@
     <template id="quienes-somos">
         <iframe src="quienes-somos/quienes-somos.html" width="100%" frameborder="0"></iframe>
     </template>
+    <template id="perfil">
+            <iframe src="perfil/perfil.html" width="100%" frameborder="0"></iframe>
+        </template>
     <div id="container">
     </div>
     <footer>
