--- a/servicio-al-cliente/servicio-al-cliente.html
+++ b/servicio-al-cliente/servicio-al-cliente.html
@@ -12,28 +12,35 @@
         <h1>
             Servicio al cliente
         </h1>
-        <form action="#">
-            Nombre:
-            <input name="nombre" type="text">
-            <br></br>
-            Motivo:
-            <select name="motivo">
-                <option value="compra">Compra</option>
-                <option value="asesoria">Asesoria</option>
-                <option value="queja">Queja</option>
-                <option value="reclamo">Reclamo</option>
-            </select>
-            <br></br>
-            Comentarios:
-            <br/>
-            <textarea name="mensaje" rows="10" cols="30"></textarea>
-            <br></br>
-            <input type="submit">
-        </form>
-        <p>
-            Para mayor información, se puede comunicar al 018000123456
-        </p>
+        <template id="formulario">
+            <form action="#">
+                Nombre:
+                <input name="nombre" type="text">
+                <br></br>
+                Motivo:
+                <select name="motivo">
+                    <option value="compra">Compra</option>
+                    <option value="asesoria">Asesoria</option>
+                    <option value="queja">Queja</option>
+                    <option value="reclamo">Reclamo</option>
+                </select>
+                <br></br>
+                Comentarios:
+                <br />
+                <textarea name="mensaje" rows="10" cols="30"></textarea>
+                <br></br>
+                <button onclick="enviar()">Enviar</button>
+            </form>
+            <p>
+                Para mayor información, se puede comunicar al 018000123456
+            </p>
+        </template>
+        <template id="respuesta">
+            <h2>Muchas gracias por escribirnos, a la mayor brevedad posible leeremos tus comentarios.</h2>
+        </template>
+        <div id="container"></div>
     </div>
+    <script src="servicio-al-cliente.js"></script>
 </body>
 
 </html>
