--- a/planes/planes.html
+++ b/planes/planes.html
@@ -11,83 +11,163 @@
     <h1>
         Planes
     </h1>
-    <div class="planes-contenido">
+    <template id="personas">
         <div class="width50">
             <h3>
                 Personas
             </h3>
+            <div>
+                <h4>A tener en cuenta:</h4>
+                <p>Por la cantidad de servicios a contratar, tendrá descuentos de la siguiente manera:
+                    <ul>
+                        <li>1 servicio contratado: 5%</li>
+                        <li>2 servicios contratados:10%</li>
+                        <li>3 servicios contratados:15%</li>
+                        <li>4 servicios contratados:20%</li>
+                    </ul>
+                </p>
+            </div>
             <p>
-                Internet <br/>
-                <input type="radio" id ="personasInternet0" name="personasInternet" value="0"> <label id="personasInternet0Label" for="personasInternet0">No incluido</label> <br>
-                <input type="radio" id ="personasInternet5" name="personasInternet" value="34000"> <label id="personasInternet5Label" for="personasInternet5"> 5 mb $34.000</label><br>
-                <input type="radio" id ="personasInternet10" name="personasInternet" value="53000"> <label id="personasInternet10Label" for="personasInternet10">10 mb $53.000</label> <br>
-                <input type="radio" id ="personasInternet20" name="personasInternet" value="65000"> <label id="personasInternet20Label" for="personasInternet20">20 mb $65.000</label> 
+                Internet <br />
+                <input type="radio" id="personasInternet0" name="personasInternet" value="0"> <label
+                    id="personasInternet0Label" for="personasInternet0">No incluido</label> <br>
+                <input type="radio" id="personasInternet5" name="personasInternet" value="34000"> <label
+                    id="personasInternet5Label" for="personasInternet5"> 5 mb $34.000</label><br>
+                <input type="radio" id="personasInternet10" name="personasInternet" value="53000"> <label
+                    id="personasInternet10Label" for="personasInternet10">10 mb $53.000</label> <br>
+                <input type="radio" id="personasInternet20" name="personasInternet" value="65000"> <label
+                    id="personasInternet20Label" for="personasInternet20">20 mb $65.000</label>
             </p>
             <p>
-                Telefonía fija <br/>
-                <input type="radio" id ="personasTelefoniaN" name="personasTelefonia" value="0"> <label id="personasTelefoniaNLabel" for="personasTelefoniaN">No incluido</label><br>
-                <input type="radio" id ="personasTelefoniaL" name="personasTelefonia" value="28000"> <label id="personasTelefoniaLLabel" for="personasTelefoniaL">Llamadas locales ilimitadas $28.000</label> <br>
-                <input type="radio" id ="personasTelefoniaNa" name="personasTelefonia" value="51300"> <label id="personasTelefoniaNaLabel" for="personasTelefoniaNa"> Llamadas Locales y Nacionales ilimitadas $51.300</label><br>
-                <input type="radio" id ="personasTelefoniaI" name="personasTelefonia" value="136700"> <label id="personasTelefoniaILabel" for="personasTelefoniaI">Llamadas Locales y Nacionales ilimitadas + 150 min destino internacional $136.700</label> 
+                Telefonía fija <br />
+                <input type="radio" id="personasTelefoniaN" name="personasTelefonia" value="0"> <label
+                    id="personasTelefoniaNLabel" for="personasTelefoniaN">No incluido</label><br>
+                <input type="radio" id="personasTelefoniaL" name="personasTelefonia" value="28000"> <label
+                    id="personasTelefoniaLLabel" for="personasTelefoniaL">Llamadas locales ilimitadas $28.000</label>
+                <br>
+                <input type="radio" id="personasTelefoniaNa" name="personasTelefonia" value="51300"> <label
+                    id="personasTelefoniaNaLabel" for="personasTelefoniaNa"> Llamadas Locales y Nacionales ilimitadas
+                    $51.300</label><br>
+                <input type="radio" id="personasTelefoniaI" name="personasTelefonia" value="136700"> <label
+                    id="personasTelefoniaILabel" for="personasTelefoniaI">Llamadas Locales y Nacionales ilimitadas + 150
+                    min destino internacional $136.700</label>
             </p>
             <p>
-                Televisión <br/>
-                <input type="radio" id ="personasTelevisionN" name="personasTelevision" value="0"> <label id="personasTelevisionNLabel" for="personasTelevisionN">No incluido</label><br>
-                <input type="radio" id ="personasTelevisionE" name="personasTelevision" value="55000"> <label id="personasTelevisionELabel" for="personasTelevisionE">100 Canales estándar + HBO $55.000</label> <br>
-                <input type="radio" id ="personasTelevisionD" name="personasTelevision" value="72300"> <label id="personasTelevisionDLabel" for="personasTelevisionD"> 115 canales estándar + 50 canales HD $72.300</label><br>
-                <input type="radio" id ="personasTelevisionI" name="personasTelevision" value="87000"> <label id="personasTelevisionILabel" for="personasTelevisionI">130 canales estándar + 65 canales HD + 5 canales deportivos $87.000</label> 
+                Televisión <br />
+                <input type="radio" id="personasTelevisionN" name="personasTelevision" value="0"> <label
+                    id="personasTelevisionNLabel" for="personasTelevisionN">No incluido</label><br>
+                <input type="radio" id="personasTelevisionE" name="personasTelevision" value="55000"> <label
+                    id="personasTelevisionELabel" for="personasTelevisionE">100 Canales estándar + HBO $55.000</label>
+                <br>
+                <input type="radio" id="personasTelevisionD" name="personasTelevision" value="72300"> <label
+                    id="personasTelevisionDLabel" for="personasTelevisionD"> 115 canales estándar + 50 canales HD
+                    $72.300</label><br>
+                <input type="radio" id="personasTelevisionI" name="personasTelevision" value="87000"> <label
+                    id="personasTelevisionILabel" for="personasTelevisionI">130 canales estándar + 65 canales HD + 5
+                    canales deportivos $87.000</label>
             </p>
             <p>
-                Servicios Móviles <br/>
-                <input type="radio" id ="personasMovilesN" name="personasMoviles" value="0"> <label id="personasMovilesNLabel" for="personasMovilesN">No incluido</label><br>
-                <input type="radio" id ="personasMovilesE" name="personasMoviles" value="26700"> <label id="personasMovilesELabel" for="personasMovilesE">Llamadas ilimitadas al mismo operador + 500 min otros operadores + redes sociales ilimitadas $26.700</label> <br>
-                <input type="radio" id ="personasMovilesD" name="personasMoviles" value="55400"> <label id="personasMovilesDLabel" for="personasMovilesD"> Llamadas ilimitadas todo destino + 300 MSM + redes sociales $55.400</label><br>
-                <input type="radio" id ="personasMovilesI" name="personasMoviles" value="78000"> <label id="personasMovilesILabel" for="personasMovilesI">Llamadas ilimitadas todo destino + 3 GB de datos + 500 MSM $78.000</label> 
+                Servicios Móviles <br />
+                <input type="radio" id="personasMovilesN" name="personasMoviles" value="0"> <label
+                    id="personasMovilesNLabel" for="personasMovilesN">No incluido</label><br>
+                <input type="radio" id="personasMovilesE" name="personasMoviles" value="26700"> <label
+                    id="personasMovilesELabel" for="personasMovilesE">Llamadas ilimitadas al mismo operador + 500 min
+                    otros operadores + redes sociales ilimitadas $26.700</label> <br>
+                <input type="radio" id="personasMovilesD" name="personasMoviles" value="55400"> <label
+                    id="personasMovilesDLabel" for="personasMovilesD"> Llamadas ilimitadas todo destino + 300 MSM +
+                    redes sociales $55.400</label><br>
+                <input type="radio" id="personasMovilesI" name="personasMoviles" value="78000"> <label
+                    id="personasMovilesILabel" for="personasMovilesI">Llamadas ilimitadas todo destino + 3 GB de datos +
+                    500 MSM $78.000</label>
             </p>
             <div style="width: 100%;text-align: center;">
                 <button onclick="cotizarPersonas()">Cotizar</button>
             </div>
         </div>
+    </template>
+    <template id="empresas">
         <div class="width50">
             <h3>
                 Empresas
             </h3>
+            <div>
+                    <h4>A tener en cuenta:</h4>
+                    <p>Por la cantidad de servicios a contratar, tendrá descuentos de la siguiente manera:
+                        <ul>
+                            <li>1 servicio contratado: 5%</li>
+                            <li>2 servicios contratados:15%</li>
+                            <li>3 servicios contratados:25%</li>
+                            <li>4 servicios contratados:30%</li>
+                        </ul>
+                    </p>
+                </div>
             <p>
-                Internet <br/>
-                <input type="radio" id ="empresasInternet0" name="empresasInternet" value="0"> <label id="empresasInternet0Label" for="empresasInternet0">No incluido</label> <br>
-                <input type="radio" id ="empresasInternet20" name="empresasInternet" value="70000"> <label id="empresasInternet20Label" for="empresasInternet20"> 20 mb $70.000</label><br>
-                <input type="radio" id ="empresasInternet50" name="empresasInternet" value="94900"> <label id="empresasInternet50Label" for="empresasInternet50">50 mb $94.900</label> <br>
-                <input type="radio" id ="empresasInternet100" name="empresasInternet" value="112000"> <label id="empresasInternet100Label" for="empresasInternet100">100 mb $112.000</label> <br>
-                <input type="radio" id ="empresasInternetDedicado" name="empresasInternet" value="35900"> <label id="empresasInternetDedicadoLabel" for="empresasInternetDedicado">Internet Dedicado $35.900</label> <br>
-                
+                Internet <br />
+                <input type="radio" id="empresasInternet0" name="empresasInternet" value="0"> <label
+                    id="empresasInternet0Label" for="empresasInternet0">No incluido</label> <br>
+                <input type="radio" id="empresasInternet20" name="empresasInternet" value="70000"> <label
+                    id="empresasInternet20Label" for="empresasInternet20"> 20 mb $70.000</label><br>
+                <input type="radio" id="empresasInternet50" name="empresasInternet" value="94900"> <label
+                    id="empresasInternet50Label" for="empresasInternet50">50 mb $94.900</label> <br>
+                <input type="radio" id="empresasInternet100" name="empresasInternet" value="112000"> <label
+                    id="empresasInternet100Label" for="empresasInternet100">100 mb $112.000</label> <br>
+                <input type="radio" id="empresasInternetDedicado" name="empresasInternet" value="35900"> <label
+                    id="empresasInternetDedicadoLabel" for="empresasInternetDedicado">Internet Dedicado $35.900</label>
+                <br>
+
             </p>
             <p>
-                Telefonía fija <br/>
-                <input type="radio" id ="empresasTelefonia0" name="empresasTelefonia" value="0"> <label id="empresasTelefonia0Label" for="empresasTelefonia0">No incluido</label><br>
-                <input type="radio" id ="empresasTelefonia2" name="empresasTelefonia" value="37800"> <label id="empresasTelefonia2Label" for="empresasTelefonia2">Llamadas regionales ilimitadas + 500 min a nivel nacional $37.800</label> <br>
-                <input type="radio" id ="empresasTelefonia3" name="empresasTelefonia" value="66000"> <label id="empresasTelefonia3Label" for="empresasTelefonia3">Llamadas nacionales ilimitadas + 500 min a celular $66.000</label><br>
-                <input type="radio" id ="empresasTelefonia4" name="empresasTelefonia" value="160744"> <label id="empresasTelefonia4Label" for="empresasTelefonia4">Llamadas nacionales ilimitadas + 2.000 min a celular + 300 min llamadas internacionales $160.744</label> 
+                Telefonía fija <br />
+                <input type="radio" id="empresasTelefonia0" name="empresasTelefonia" value="0"> <label
+                    id="empresasTelefonia0Label" for="empresasTelefonia0">No incluido</label><br>
+                <input type="radio" id="empresasTelefonia2" name="empresasTelefonia" value="37800"> <label
+                    id="empresasTelefonia2Label" for="empresasTelefonia2">Llamadas regionales ilimitadas + 500 min a
+                    nivel nacional $37.800</label> <br>
+                <input type="radio" id="empresasTelefonia3" name="empresasTelefonia" value="66000"> <label
+                    id="empresasTelefonia3Label" for="empresasTelefonia3">Llamadas nacionales ilimitadas + 500 min a
+                    celular $66.000</label><br>
+                <input type="radio" id="empresasTelefonia4" name="empresasTelefonia" value="160744"> <label
+                    id="empresasTelefonia4Label" for="empresasTelefonia4">Llamadas nacionales ilimitadas + 2.000 min a
+                    celular + 300 min llamadas internacionales $160.744</label>
             </p>
             <p>
-                Televisión <br/>
-                <input type="radio" id ="empresasTelevisionN" name="empresasTelevision" value="0"> <label id="empresasTelevisionNLabel" for="empresasTelevisionN">No incluido</label><br>
-                <input type="radio" id ="empresasTelevisionE" name="empresasTelevision" value="85000"> <label id="empresasTelevisionELabel" for="empresasTelevisionE">105 canales estándar + 50 canales HD, 2 decodificadores 85.000</label> <br>
-                <input type="radio" id ="empresasTelevisionD" name="empresasTelevision" value="151900"> <label id="empresasTelevisionDLabel" for="empresasTelevisionD"> 138 canales estándar + 103 canales HD, 4 decodificadores $151.900</label><br>
-                <input type="radio" id ="empresasTelevisionI" name="empresasTelevision" value="183200"> <label id="empresasTelevisionILabel" for="empresasTelevisionI">150 canales estándar + 110 canales HD + 5  decodificadores $183.200</label> 
+                Televisión <br />
+                <input type="radio" id="empresasTelevisionN" name="empresasTelevision" value="0"> <label
+                    id="empresasTelevisionNLabel" for="empresasTelevisionN">No incluido</label><br>
+                <input type="radio" id="empresasTelevisionE" name="empresasTelevision" value="85000"> <label
+                    id="empresasTelevisionELabel" for="empresasTelevisionE">105 canales estándar + 50 canales HD, 2
+                    decodificadores 85.000</label> <br>
+                <input type="radio" id="empresasTelevisionD" name="empresasTelevision" value="151900"> <label
+                    id="empresasTelevisionDLabel" for="empresasTelevisionD"> 138 canales estándar + 103 canales HD, 4
+                    decodificadores $151.900</label><br>
+                <input type="radio" id="empresasTelevisionI" name="empresasTelevision" value="183200"> <label
+                    id="empresasTelevisionILabel" for="empresasTelevisionI">150 canales estándar + 110 canales HD + 5
+                    decodificadores $183.200</label>
             </p>
             <p>
-                Servicios Móviles <br/>
-                <input type="radio" id ="empresasMovilesN" name="empresasMoviles" value="0"> <label id="empresasMovilesNLabel" for="empresasMovilesN">No incluido</label><br>
-                <input type="radio" id ="empresasMovilesE" name="empresasMoviles" value="30000"> <label id="empresasMovilesELabel" for="empresasMovilesE">Llamadas ilimitadas a todo operador + 5 GB de datos + 150 MSM $30.000</label> <br>
-                <input type="radio" id ="empresasMovilesD" name="empresasMoviles" value="56000"> <label id="empresasMovilesDLabel" for="empresasMovilesD"> Llamadas ilimitadas a todo operador + 15 GB de datos + 300 MSM $56.000</label><br>
-                <input type="radio" id ="empresasMovilesI" name="empresasMoviles" value="75000"> <label id="empresasMovilesILabel" for="empresasMovilesI">Llamadas ilimitadas a todo operador + 30 GB de datos + 1.000 MSM $75.000</label><br>
-                <input type="radio" id ="empresasMovilesPlus" name="empresasMoviles" value="105000"> <label id="empresasMovilesPlusLabel" for="empresasMovilesPlus">Llamadas ilimitadas a todo operador + 50 GB de datos + 1.000 MSM + 500 min llamadas al exterior $105.000</label> 
+                Servicios Móviles <br />
+                <input type="radio" id="empresasMovilesN" name="empresasMoviles" value="0"> <label
+                    id="empresasMovilesNLabel" for="empresasMovilesN">No incluido</label><br>
+                <input type="radio" id="empresasMovilesE" name="empresasMoviles" value="30000"> <label
+                    id="empresasMovilesELabel" for="empresasMovilesE">Llamadas ilimitadas a todo operador + 5 GB de
+                    datos + 150 MSM $30.000</label> <br>
+                <input type="radio" id="empresasMovilesD" name="empresasMoviles" value="56000"> <label
+                    id="empresasMovilesDLabel" for="empresasMovilesD"> Llamadas ilimitadas a todo operador + 15 GB de
+                    datos + 300 MSM $56.000</label><br>
+                <input type="radio" id="empresasMovilesI" name="empresasMoviles" value="75000"> <label
+                    id="empresasMovilesILabel" for="empresasMovilesI">Llamadas ilimitadas a todo operador + 30 GB de
+                    datos + 1.000 MSM $75.000</label><br>
+                <input type="radio" id="empresasMovilesPlus" name="empresasMoviles" value="105000"> <label
+                    id="empresasMovilesPlusLabel" for="empresasMovilesPlus">Llamadas ilimitadas a todo operador + 50 GB
+                    de datos + 1.000 MSM + 500 min llamadas al exterior $105.000</label>
             </p>
             <div style="width: 100%;text-align: center;">
 
                 <button onclick="cotizarEmpresas()">Cotizar</button>
             </div>
         </div>
+    </template>
+    <div class="planes-contenido" id="container">
     </div>
     <script src="planes.js"></script>
 </body>
